【jvm】 软引用引用队列回收及弱引用demo及redis配置类提交